--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>DhruvSharma</title>
+    <title>Anubhav</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon-n.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:wght@500&family=Sriracha&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
       <img class="topcloud" src="cloud.png" alt="cloud">
       <br>
       <br>
-      <h1>I'm Dhruv</h1>
+      <h1>I'm Anubhav</h1>
       <h2 class="sub-head">a <span class="pro">pro</span>grammer</h2>
       <img class="bottomcloud" src="cloud.png" alt="cloud">
       <img src="mountain.png" alt="mountain">
@@ -42,16 +42,16 @@
           <h2>Get In Touch</h2>
           <h3>Love to code, eat and play chess Like me??</h3>
           <p>I would love to spend some time coding with you!!</p>
-          <a href="mailto:dhruvsharma1881@gmail.com" class="testbutton">CONTACT ME</a>
+          <a href="mailto:anubhavchoubey2000@gmail.com" class="testbutton">CONTACT ME</a>
         </div>
       </div>
 
 
       <div class="bottomContainer">
-        <a class="footer-link" href="https://www.linkedin.com/in/dhruv-sharma-8a9a42192/">LinkedIn</a>
-        <a class="footer-link" href="https://github.com/Dhruv1881">GitHub</a>
-        <a class="footer-link" href="https://www.hackerrank.com/NIGHTFURY1881">HackerRank</a>
-        <p class="end">© 2020 Dhruv Sharma.</p>
+        <a class="footer-link" href=" ">LinkedIn</a>
+        <a class="footer-link" href=" ">GitHub</a>
+        <a class="footer-link" href=" ">HackerRank</a>
+        <p class="end">© Anubhav.</p>
       </div>
   </body>
 </html>
